package com.example.book_management.domain

class BookCode {

}
