package com.example.book_management.domain

class BookEntity {
    val bookNumber: BookNumber = BookNumber()
    val bookInfomation: BookInfomation = BookInfomation()
}