package com.example.book_management.domain

class BookInfomation {
    val bookCode: BookCode = BookCode()
    val bookTitle: BookTitle = BookTitle()
    val bookVolume: BookVolume = BookVolume()
    val bookAuthor: BookAuthor = BookAuthor()
}