package com.example.book_management.domain

class BookTitle {

}
